# csvplotrs

./: Cargo.toml  README.md  testdata.csv
src/: csvplot.rs  data.rs  main.rs
